--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pwa-text-editor",
   "version": "1.0.0",
   "engines": {
+    "npm": "8.x",
     "node": "18.x"
   },
   "description": "",
@@ -11,7 +12,7 @@
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm ci && npm run build",
-    "install": "cd client && npm install",
+    "install": "cd server && npm i && cd ../client && npm i",
     "client": "cd client && npm start"
   },
   "keywords": [],
