Includes application folder structures and early functional code.

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,9 @@ typings/
 dist
 
 # Gatsby files
+
+# DS Store
+**/.DS_Store
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
@@ -104,4 +107,4 @@ dist
 .tern-port
 
 # DS Store
-//.DS_Store
+**/.DS_Store
