--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "pwa-text-editor",
   "version": "1.0.0",
-  "engines": {
-    "npm": "8.x",
-    "node": "18.x"
-  },
   "description": "",
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
-    "build": "cd client && npm ci && npm run build",
+    "build": "cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
     "client": "cd client && npm start"
   },
