--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4",
-    "webpack": "^5.76.1"
+    "webpack": "^5.76.1",
+    "webpack-cli": "^5.0.1"
   }
 }
