--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "if-env": "^1.0.4"
   },
   "devDependencies": {
