--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "pwa-text-editor",
   "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "engines": {
     "node": "18.x"
   },
-  "description": "",
-  "main": "server.js",
   "scripts": {
     "dev": "webpack-dev-server",
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
-    "install": "cd server && npm i && cd ../client && npm i",
+    "install": "cd server && npm install",
     "client": "cd client && npm start"
   },
   "keywords": [],
@@ -22,7 +22,8 @@
     "express": "^4.17.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "serve": "^13.0.2"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
