additional changes made to address heroku issues

--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "pwa-text-editor",
+  "name": "PWA_TextEditor",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
-    "dev": "webpack-dev-server",
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
-    "install": "cd server && npm install",
+    "install": "cd server && npm i && cd ../client && npm i",
     "client": "cd client && npm start"
   },
   "keywords": [],
@@ -20,15 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "if-env": "^1.0.4",
-    "serve": "^14.2.0"
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4",
-    "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1"
+    "nodemon": "^2.0.4"
   }
 }
