--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "pwa-text-editor",
+  "name": "PWA_TextEditor",
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack --mode production",
-    "start": "webpack --watch",
-    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress"
+    "start": "webpack --watch"
   },
   "author": "2U",
   "license": "UNLICENSED",
@@ -15,8 +14,8 @@
     "@babel/runtime": "^7.15.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "http-server": "^14.1.1",
+    "html-webpack-plugin": "^5.3.2",
+    "http-server": "^0.11.1",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
@@ -26,7 +25,6 @@
   },
   "dependencies": {
     "code-mirror-themes": "^1.0.0",
-    "html-loader": "^4.2.0",
     "idb": "^6.1.2"
   }
 }
