--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "PWA_TextEditor",
+  "name": "pwa-text-editor",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
+    "dev": "webpack-dev-server",
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
-    "install": "cd server && npm i && cd ../client && npm i",
+    "install": "cd server && npm install",
     "client": "cd client && npm start"
   },
   "keywords": [],
@@ -16,10 +20,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "if-env": "^1.0.4",
+    "serve": "^14.2.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "webpack": "^5.76.1",
+    "webpack-cli": "^5.0.1"
   }
 }
