--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
+    "install": "cd server && npm install",
     "install": "cd client && npm install",
     "client": "cd client && npm start"
   },
