--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
-    "build": "cd .client && && npm ci && npm run build",
+    "build": "cd ./client && && npm i && npm run build",
     "install": "concurrently \"cd server && npm install\" \"cd client && npm install && npm  install --save-dev webpack-cli\"",
     "client": "cd client && npm start"
   },
