--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "scripts": {
     "dev": "webpack-dev-server",
-    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && && npm  install --save-dev webpack-pwa-manifest && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
-    "build": "cd ./client && npm  install --save-dev webpack-pwa-manifest && npm run build",
+    "build": "cd ./client  && npm run build",
     "install": "concurrently \"cd server && npm install\" \"cd client && npm install\"",
     "client": "cd client && npm start"
   },
