--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server",
-    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && && npm  install --save-dev webpack-pwa-manifest && npm run dev\"",
+    "start:dev": "concurrently \"cd server && npm run server\" && \"cd client && npm  install --save-dev webpack-pwa-manifest && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd ./client  && npm run build",
