--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "scripts": {
     "dev": "webpack-dev-server",
-    "start:dev": "concurrently \"cd server && npm run server\" && \"cd client && npm  install --save-dev webpack-pwa-manifest && npm run dev\"",
+    "start:dev": "concurrently \"cd server && npm run server\" &&  \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd ./client  && npm run build",
-    "install": "concurrently \"cd server && npm install\" \"cd client && npm install\"",
+    "install": "concurrently \"cd server && npm install\" \"cd client && npm install && npm install --save-dev webpack-pwa-manifest \"",
     "client": "cd client && npm start"
   },
   "keywords": [],
