--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd ./client  && npm run build",
-    "install": "concurrently \"cd server && npm install\" \"cd client && npm install && npm install --save-dev webpack-pwa-manifest \"",
+    "install": "concurrently \"cd server && npm install\" \"cd ./client && npm install && npm install --save-dev webpack-pwa-manifest \"",
     "client": "cd client && npm start"
   },
   "keywords": [],
