--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "PWA_TextEditor",
+  "name": "pwa-text-editor",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "webpack-dev-server",
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
-    "install": "cd server && npm i && cd ../client && npm i",
+    "install": "cd ../client && npm i && cd server && npm i",
     "client": "cd client && npm start"
   },
   "keywords": [],
@@ -21,21 +20,6 @@
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4",
-    "webpack": "^5.76.1",
-        "webpack-cli": "^5.0.1",
-        "@babel/core": "^7.15.0",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/runtime": "^7.15.3",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "http-server": "^14.1.1",
-    "style-loader": "^3.2.1",
-   
-    "webpack-dev-server": "^4.0.0",
-    "webpack-pwa-manifest": "^4.3.0",
-    "workbox-webpack-plugin": "^6.2.4"
+    "nodemon": "^2.0.4"
   }
 }
