--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tv-guid-search",
+  "name": "tv-guide-search",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -11,17 +11,18 @@
     "axios": "^1.3.4",
     "connect-session-sequelize": "^7.1.5",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.1",
+    "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
-    "fast-xml-parser": "^4.1.3",
-    "moment": "^2.29.4",
-    "mysql2": "^3.2.0",
-    "nodemon": "^2.0.21",
-    "sequelize": "^6.29.2",
+    "fast-xml-parser": "^4.3.3",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.44",
+    "mysql2": "^3.7.0",
+    "node-cron": "^3.0.3",
+    "nodemon": "^3.0.2",
+    "sequelize": "^6.35.2",
     "uniqid": "^5.4.0",
-    "xml2js": "^0.4.23"
-  },
-  "devDependencies": {}
+    "xml2js": "^0.6.2"
+  }
 }
